--- a/templates/puppet.conf.j2
+++ b/templates/puppet.conf.j2
@@ -1,5 +1,7 @@
 [main]
 certname = {{ puppet_node_name }}
+environment = {{ puppet_environment }}
+
 [agent]
 server = {{ puppet_agent_master_server }}
 runinterval = {{ puppet_agent_run_interval }}
